force-app/main/default/objects/Stripe_Payment_Config__c/Stripe_Payment_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Object-agnostic Stripe payment configuration. Each record maps a Salesforce object + payment context to Stripe parameters via pipe-encoded field mappings. Editable from the Stripe Setup UI at runtime - no deployment needed.</description>
    <label>Stripe Payment Config</label>
</CustomObject>