force-app/main/default/objects/Stripe_Payment_Config__c/fields/Allow_Promotion_Codes__c.field-meta.xml
<CustomField>
    <fullName>Allow_Promotion_Codes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Promotion Codes</label>
    <type>Checkbox</type>
</CustomField>