force-app/main/default/objects/Stripe_Payment_Config__c/fields/Allowed_Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Payment_Methods__c</fullName>
    <label>Allowed Payment Methods</label>
    <length>255</length>
    <type>Text</type>
</CustomField>