force-app/main/default/objects/Stripe_Payment_Config__c/fields/Amount_Field__c.field-meta.xml
<CustomField>
    <fullName>Amount_Field__c</fullName>
    <label>Amount Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>