force-app/main/default/objects/Stripe_Payment_Config__c/fields/Checkout_Mode__c.field-meta.xml
<CustomField>
    <fullName>Checkout_Mode__c</fullName>
    <label>Default Checkout Mode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>