force-app/main/default/objects/Stripe_Payment_Config__c/fields/Collect_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Collect_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collect Billing Address</label>
    <type>Checkbox</type>
</CustomField>