force-app/main/default/objects/Stripe_Payment_Config__c/fields/Email_Field__c.field-meta.xml
<CustomField>
    <fullName>Email_Field__c</fullName>
    <label>Email Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>