force-app/main/default/objects/Stripe_Payment_Config__c/fields/Expiry_Hours__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Hours__c</fullName>
    <label>Link Expiry Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>