force-app/main/default/objects/Stripe_Payment_Config__c/fields/Guest_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Guest_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Guest (Community) Enabled</label>
    <type>Checkbox</type>
</CustomField>