force-app/main/default/objects/Stripe_Payment_Config__c/fields/Name_Field__c.field-meta.xml
<CustomField>
    <fullName>Name_Field__c</fullName>
    <label>Name Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>