force-app/main/default/objects/Stripe_Payment_Config__c/fields/Payment_Options_Config__c.field-meta.xml
<CustomField>
    <fullName>Payment_Options_Config__c</fullName>
    <label>Payment Options Config</label>
    <length>255</length>
    <type>Text</type>
</CustomField>