force-app/main/default/objects/Stripe_Payment_Config__c/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type (One-Time/Recurring)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>