force-app/main/default/objects/Stripe_Payment_Config__c/fields/Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>Phone_Field__c</fullName>
    <label>Phone Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>