force-app/main/default/objects/Stripe_Payment_Config__c/fields/Post_Success_Flow__c.field-meta.xml
<CustomField>
    <fullName>Post_Success_Flow__c</fullName>
    <label>Post Success Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>