force-app/main/default/objects/Stripe_Payment_Config__c/fields/Price_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>Price_Id_Field__c</fullName>
    <label>Price Id Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>