force-app/main/default/objects/Stripe_Payment_Config__c/fields/Product_Info_Field__c.field-meta.xml
<CustomField>
    <fullName>Product_Info_Field__c</fullName>
    <label>Product Info Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>