force-app/main/default/objects/Stripe_Payment_Config__c/fields/QuickActionName__c.field-meta.xml
<CustomField>
    <fullName>QuickActionName__c</fullName>
    <label>Quick Action Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>