force-app/main/default/objects/Stripe_Payment_Config__c/fields/Save_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Save_Payment_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save Payment Method</label>
    <type>Checkbox</type>
</CustomField>