force-app/main/default/objects/Stripe_Payment_Config__c/fields/Trial_Days__c.field-meta.xml
<CustomField>
    <fullName>Trial_Days__c</fullName>
    <label>Trial Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>