force-app/main/default/objects/Stripe_Payment_Config__c/fields/UDF10_Field__c.field-meta.xml
<CustomField>
    <fullName>UDF10_Field__c</fullName>
    <label>UDF10 Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>