force-app/main/default/objects/Stripe_Payment_Config__c/fields/UDF1_Field__c.field-meta.xml
<CustomField>
    <fullName>UDF1_Field__c</fullName>
    <label>UDF1 Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>