force-app/main/default/objects/Stripe_Payment_Config__c/fields/ValidationRuleConfig__c.field-meta.xml
<CustomField>
    <fullName>ValidationRuleConfig__c</fullName>
    <label>Validation Rule Config</label>
    <type>TextArea</type>
</CustomField>